# routes/swagger-output.json
@@ -16,21 +16,15 @@
       "get": {
         "description": "",
         "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": {}
       }
     },
-    "/login": {
+    "/logins": {
       "get": {
         "description": "",
         "parameters": [],
         "responses": {}
-      }
-    },
-    "/users": {
+      },
       "post": {
         "description": "",
         "parameters": [],
@@ -41,11 +35,26 @@
       "get": {
         "description": "",
         "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
+        "responses": {}
+      }
+    },
+    "/register": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      },
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/logout": {
+      "delete": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     },
     "/app/app/games/": {
@@ -347,10 +356,10 @@
                 "password": {
                   "example": "any"
                 },
-                "fname": {
+                "name": {
                   "example": "any"
                 },
-                "lname": {
+                "email": {
                   "example": "any"
                 }
               }
@@ -360,6 +369,27 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/app/app/users/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
