# routes/users.js
@@ -3,9 +3,11 @@ var cors = require('cors')
 const express = require('express');
 const router = express.Router();
 
-const {createUs} = require( '../controllers/users.controllers')
+const {createUs, deleteUs, getUserById} = require( '../controllers/users.controllers')
 
+router.get('/:id', getUserById)
 router.post('/', createUs)
+router.delete('/:id', deleteUs)
 
 
 // Exports
